<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaga.boardgameshelper.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="diceButtonOnClick"
        android:text="@string/roll_dice_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEvents"
        style="@style/com_facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="eventsButtonOnClick"
        android:text="@string/search_events_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/login_button" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="57dp">

        <Button
            android:id="@+id/templateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="templatesButtonOnClick"
            android:text="@string/my_templates_string" />

        <Button
            android:id="@+id/searchTemplateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchTemplatesButtonOnClick"
            android:text="@string/search_templates_string" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/sessionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sessionsButtonOnClick"
            android:text="@string/my_sessions_string"
            android:textSize="36sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
