<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaga.boardgameshelper.DiceRollActivity">

    <TableLayout
        android:id="@+id/dice_table"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/dice_row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_of_dices_test"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewDice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_dices"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarDice"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:max="9"
                android:progress="0" />
        </TableRow>

        <TableRow
            android:id="@+id/dice_row_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num_of_dice_sizes_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewSize"
                android:layout_height="wrap_content"
                android:text="@string/number_of_sizes"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarSize"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:max="19"
                android:progress="5" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textViewSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/accel_number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
