<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaga.boardgameshelper.TemplatesActivity$TemplatesListFragment">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/newTemplateLayout"
            app:layout_anchor="@id/newTemplateLayout"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include
                android:id="@+id/temp_list"
                layout="@layout/template_list" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/newTemplateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNewTemplate"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="3"
                android:hint="@string/name_string"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/min_max_players"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextMinPlayers"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Min"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editTextMaxPlayers"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Max"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:singleLine="true" />

            <Button
                android:id="@+id/buttonNewTemplate"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_text"
                android:textSize="10sp"
                android:onClick="onNewClick"/>

        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>