<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shaga.boardgameshelper.TemplatesActivity">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTemplateStringFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="5"
            android:text="@string/string_fields_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/name_string"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonAddTempString"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="+"
            android:onClick="textFieldPlus"/>
        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <include
            android:id="@+id/string_temp_field_list"
            layout="@layout/template_fields_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTemplateIntegerFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="5"
            android:text="@string/integer_fields_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNumberField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/name_string"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonAddTempInt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="+"
            android:onClick="numberFieldPlus"/>
        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <include
            android:id="@+id/int_temp_field_list"
            layout="@layout/template_fields_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTemplateBooleanFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="5"
            android:text="@string/boolean_fields_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextBoolField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/name_string"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonAddTempBool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="+"
            android:onClick="boolenFieldPlus"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <include
            android:id="@+id/bool_temp_field_list"
            layout="@layout/template_fields_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>
